fix footnote spacing

--- a/static/bootstrap/less/_slickwiki-styles.less
+++ b/static/bootstrap/less/_slickwiki-styles.less
@@ -394,4 +394,13 @@ body {
         pointer-events: none;
     }
 
+    .footnote {
+        hr {
+            display: none;
+        }
+        li p {
+            margin: 0;
+        }
+    }
+
 }
